Update map link

--- a/templates/index.html
+++ b/templates/index.html
@@ -336,7 +336,7 @@
             const bluemapLink = document.getElementById('bluemap-link');
             if (bluemapLink) {
                 const currentHost = window.location.hostname;
-                bluemapLink.href = `http://${currentHost}:8100`;
+                bluemapLink.href = `https://map.hopestudents.org`;
             }
         });
     </script>
