--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <!-- New World Map Button -->
                 <div class="inline-flex items-center bg-slate-900 px-1 py-1 border-2 border-gray-600 shadow-lg max-w-md w-full md:w-auto">
-                    <a href="#" id="bluemap-link" target="_blank" class="mc-btn bg-blue-600 hover:bg-blue-500 text-white font-mc text-xl py-2 px-8 shadow-lg flex items-center justify-center w-full">
+                    <a href="https://map.hopestudents.org" class="mc-btn bg-blue-600 hover:bg-blue-500 text-white font-mc text-xl py-2 px-8 shadow-lg flex items-center justify-center w-full">
                         <i class="fas fa-globe mr-2"></i> SEE WORLD
                     </a>
                 </div>
@@ -331,14 +331,6 @@
             }
         }
 
-        // Set the BlueMap link dynamically
-        document.addEventListener('DOMContentLoaded', () => {
-            const bluemapLink = document.getElementById('bluemap-link');
-            if (bluemapLink) {
-                const currentHost = window.location.hostname;
-                bluemapLink.href = `https://map.hopestudents.org`;
-            }
-        });
     </script>
 </body>
 </html>
