--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@
                         </div>
                         <div class="flex items-start">
                             <span class="bg-blue-900 text-blue-200 px-2 py-1 mr-3 text-xs rounded-sm h-6 flex items-center">5</span>
-                            <p>Port: <span class="text-green-400">19132</span> (Default)</p>
+                            <p>Port: <span class="text-green-400">9077</span></p>
                         </div>
                     </div>
                 </div>
